Fixed spacing on index.html blog preview.

--- a/styles.css
+++ b/styles.css
@@ -128,8 +128,8 @@ h1, h2 {
 
  }
 
- .adopt-section-image {
-   width: 100%;
+ .adopt-section-image img {
+   width: 80%;
 
  }
 
@@ -232,68 +232,11 @@ h1, h2 {
    height: 50px;
    color: blue;
    background-color: gray;
-   margin-top: 2rem;
+   margin: 0 auto;
 
  }
 
  /* Location for media queries */
-
-@media screen and (min-width: 768px) {
-
-
-  .master-master-container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
-
-  }
-
-  .master-container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 70%;
-    justify-content: center;
-
-  }
-
-
-    .blog-container-mainpage {
-      display: flex;
-      flex-wrap: wrap;
-      width: 25%;
-      justify-content: center;
-      align-items: flex-start;
-      margin-top: 5%;
-
-  }
-
-    .blog-blurb-mainpage {
-      display: flex;
-      flex-wrap: wrap;
-
-  }
-
-
-    .blog-image-preview {
-      width: 250px;
-      height: 180px;
-    }
-
-  }
-
-
-@media screen and (max-width: 767px) {
-    .blog-container-mainpage {
-      display: none;
-
-    }
-
-    .master-container {
-      width: 100%;
-    }
-
-}
 
 
 
@@ -409,6 +352,78 @@ label {
   justify-content: center;
   flex-direction: column;
   padding: 1rem;
+
+}
+
+/* Media queries */
+
+@media screen and (min-width: 768px) {
+
+
+  .master-master-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+  }
+
+  .master-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 70%;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+  }
+
+
+  .blog-container-mainpage {
+    display: flex;
+    flex-wrap: wrap;
+    width: 25%;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 5%;
+
+
+  }
+
+    .blog-blurb-mainpage {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+
+  }
+
+    .blog-image-preview {
+      width: 280px;
+      height: 180px;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    .blog-read-more {
+      margin-top: 1rem;
+    }
+
+  }
+
+
+@media screen and (max-width: 767px) {
+    .blog-container-mainpage {
+      display: none;
+
+    }
+
+    .master-container {
+      width: 100%;
+    }
 
 }
 
